refactoring check_user_email, adding test stubs

--- a/vcweb/core/templates/accounts/asu_registration.html
+++ b/vcweb/core/templates/accounts/asu_registration.html
@@ -10,7 +10,8 @@
     <div class='panel-body'>
         Please fill out all of the following fields to be registered with our experiment mailing list. In order to
         participate in our experiments you <b>must be an undergraduate student currently enrolled at ASU and at
-        least 18 years of age</b>. If you have any further questions, please see <a href='/ostromlab/faq'>our FAQ</a> or feel free to <a href='/contact'>contact us</a>.
+        least 18 years of age</b>. If you have any further questions, please see <a href='/ostromlab/faq'>our FAQ</a> or
+    <a href='/contact'>send us a message</a>.
     </div>
 </div>
 <form id='vcweb-form' method='post' class='form-horizontal' action='/cas/asu/submit/'>
