fix JsonResponse <-> KO mapping plugin wiring
The transition to Django 1.7's JsonResponse class returns direct JSON
objects instead of JSON strings. changing ko.mapping plugin usage
accordingly

--- a/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
@@ -497,17 +497,17 @@ $(function() {
         viewModel.showActivityPerformedModal();
         var id = challengeModel.pk();
         var formData = $('#challengeForm' + id).serialize();
-        // console.debug("form data: " + formData);
         $.post('/lighterprints/api/do-activity', formData, function(data) {
             console.debug(data);
             if (data.success) {
-                ko.mapping.fromJSON(data.viewModel, viewModel);
+                ko.mapping.fromJS(data.viewModel, viewModel);
                 viewModel.lastPerformedActivity(challengeModel);
                 viewModel.hideActivityPerformedModal();
                 viewModel.initializeChart();
             }
             else {
-                console.debug("ERROR: " + data.response);
+                console.warn("ERROR: ");
+                console.warn(data.response);
                 $('#activityPerformedModal').modal('hide');
                 viewModel.errorMessage(data.response);
                 $('#activityUnavailableModal').modal();
