--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -14,7 +14,7 @@
 {% url 'subjectpool:experimenter_index' as subjectpool %}
 <!DOCTYPE html>
 <html lang="en">
-{% with jquery_version="2.1.1" bootstrap_version="3.2.0" fontawesome_version="4.2.0" %}
+{% with jquery_version="2.1.1" bootstrap_version="3.2.0" fontawesome_version="4.2.0" knockout_version="3.2.0" ravenjs_version="1.1.16" %}
 <head>
 {% block head %}
 <title>{% block title %}Virtual Commons Web Experiment{% endblock %}</title>
@@ -140,10 +140,10 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/{{bootstrap_version}}/js/bootstrap.min.js"></script>
     <script src='{% static "js/bootbox.min.js" %}'></script>
     <script src='{% static "js/jquery.cookie.js" %}'></script>
-    <script src='//cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/knockout/{{knockout_version}}/knockout-min.js'></script>
     <script src='{% static "js/ko/knockout.mapping.min.js" %}'></script>
     <script src='{% static "js/common.js" %}'></script>
-    <script src="//cdn.ravenjs.com/1.1.15/jquery,native/raven.min.js"></script>
+    <script src="//cdn.ravenjs.com/{{ravenjs_version}}/jquery,native/raven.min.js"></script>
     <script>Raven.config('{% sentry_public_dsn %}').install();</script>
     {% block javascript %}
     {% endblock %}
