refactor lighterprints group sidebar display
group activity sidebar sliced before filtering. now filtering and then
slicing and including more group activities for the no_leaderboard
option

renaming do-activity endpoint to perform-activity and updating tests

--- a/vcweb/experiment/lighterprints/templates/lighterprints/highschool.html
+++ b/vcweb/experiment/lighterprints/templates/lighterprints/highschool.html
@@ -419,7 +419,7 @@ $(function() {
         var id = challengeModel.pk();
         var formData = $('#challengeForm' + id).serialize();
         // console.debug("form data: " + formData);
-        $.post('/lighterprints/api/do-activity', formData, function(data) {
+        $.post("{% url 'lighterprints:perform_activity' %}", formData, function(data) {
             console.debug(data);
             if (data.success) {
                 ko.mapping.fromJSON(data.viewModel, viewModel);
