replace last vestige of famfamfam with fontawesome

--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -62,7 +62,7 @@
                 <h4><i class='fa fa-arrow-circle-o-down'></i> Download Data</h4>
                 <ul class='list-inline'>
                     <li><a href='download/csv'><i class='fa fa-file-text'></i> csv</a></li>
-                    <li><a href='download/xls'><img src='{{STATIC_URL}}images/famfamfam/page_white_excel.png' alt='xls'/> excel</a></li>
+                    <li><a href='download/xls'><i class='fa fa-file-excel-o'></i> excel</a></li>
                 </ul>
                 {% comment %}
                 FIXME: disabled for the time being
