add haproxy config for sockjs
The timeout tunnel directive is essential for maintaining websocket
connections, tune as needed.

also changing vcweb-sockjs to bind to /websocket/participant and
/websocket/experimenter so haproxy can properly dispatch /websocket
requests to them

--- a/vcweb/core/templates/includes/sockjs.html
+++ b/vcweb/core/templates/includes/sockjs.html
@@ -17,8 +17,8 @@ function connect(uri, port) {
         console.log("no uri specified, defaulting to /sockjs");
         uri = DEFAULT_URI;
     }
-    var sockjsServer = "http://" + host + ":" + port + uri;
-    // var sockjsServer = "https://" + host + "/websocket" + uri;
+    // var sockjsServer = "http://" + host + ":" + port + uri;
+    var sockjsServer = "https://" + host + "/websocket" + uri;
     console.log("Establishing connection to " + sockjsServer);
     socket = new SockJS(sockjsServer);
     socket.onopen = function() {
@@ -30,7 +30,6 @@ function connect(uri, port) {
     socket.onclose = function() {
         console.log('sockjs connection closed');
     };
-    console.log("connecting to " + host + ":" + port + uri);
     return socket;
 }
 function getWebSocket() {
