--- a/vcweb/core/templates/experimenter/edit-configuration.html
+++ b/vcweb/core/templates/experimenter/edit-configuration.html
@@ -204,9 +204,6 @@
     <script type='text/html' id='round-param-template'>
         <form method="post" class="form-horizontal" data-bind="submit: $root.saveRoundParam">
             <input type="hidden" data-bind="value: pk">
-            <!-- ko if: parent_pk -->
-            <input type="hidden" data-bind="value: parent_pk" class="parent_pk">
-            <!-- /ko -->
             {%  bootstrap_form round_param_form layout="horizontal" label_class="col-md-3" field_class="col-md-6"%}
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary">Save</button>
@@ -286,7 +283,7 @@
 
                 self.display_name = ko.observable(data.display_name);
                 self.pk = ko.observable(data.pk);
-                self.parent_pk = ko.observable(data.parent_pk);
+                self.round_configuration = ko.observable(data.round_configuration || data.round_configuration_pk);
                 self.parameter = ko.observable(data.parameter_pk);
                 self.string_value = ko.observable(data.string_value);
                 self.int_value = ko.observable(data.int_value);
@@ -294,9 +291,9 @@
                 self.boolean_value = ko.observable(map[data.boolean_value]);
                 self.is_active = ko.observable(data.is_active);
             }
+
             // KO View Model for Round Configuration Accordion
             function NodeModel(data) {
-
                 var self = this;
 
                 self.isExpanded = ko.observable(false);
@@ -381,21 +378,17 @@
                 }
 
                 model.removeExpParam = function (expParam){
-                    $.ajax("/api/configuration/experiment/param/" + expParam.pk(), {
-                        data: 'request_type=delete',
-                        type: "POST",
-                        success: function(result) {
+                    $.post("/api/configuration/experiment/param/" + expParam.pk(), 'request_type=delete')
+                        .done(function(result) {
                             if (result.success){
                                 model.expParamValuesList.remove(expParam);
                             } else {
                                 // Error Message
                             }
-                        }
-                    });
+                        });
                 }
-
                 model.addRoundParam = function(roundConfig) {
-                    var temp = new ParamViewModel({'parent_pk': roundConfig.pk(), 'is_active': true});
+                    var temp = new ParamViewModel({'round_configuration': roundConfig.pk(), 'is_active': true});
                     model.modalData(temp);
                     model.template("round-param-template");
                     model.activateModal(true);
@@ -408,17 +401,18 @@
                 }
 
                 model.removeRoundParam = function(roundParam) {
-                    $.ajax("/api/configuration/round/param/"+ roundParam.pk, {
-                        data: 'request_type=delete',
-                        type: "POST",
-                        success: function(result) {
+                    var data = 'round_configuration='+roundParam.round_configuration_pk +
+                               '&parameter='+ roundParam.parameter_pk+
+                               '&request_type=delete';
+
+                    $.post("/api/configuration/round/param/"+ roundParam.pk, data)
+                        .done(function(result) {
                             if(result.success){
                                  $.each(model.roundConfigList(), function() { this.children.remove(roundParam) })
                             } else {
                                 // Error Message
                             }
-                        }
-                    });
+                        });
                 }
 
                 model.addRoundConfig = function (data, event) {
@@ -448,17 +442,14 @@
                     });
                 }
                 model.saveRoundParam = function(form) {
-                    var form = $(form);
-                    var paramPk = parseInt(form.find("input[type='hidden']").val());
-                    var roundPk = parseInt(form.find("input[type='hidden'].parent_pk").val());
-                    var formData = form.serialize();
+                    var form = $(form),
+                        paramPk = parseInt(form.find("input[type='hidden']").val()),
+                        formData = form.serialize();
 
                     if (paramPk) {
                         // Update Request
-                        $.ajax("/api/configuration/round/param/" + paramPk, {
-                            data: formData + '&round_configuration=' + roundPk + '&request_type=update',
-                            type: "POST",
-                            success: function(result){
+                        $.post("/api/configuration/round/param/" + paramPk, formData + '&request_type=update')
+                            .done(function(result){
                                 if(result.success){
                                     var match = ko.utils.arrayFirst(model.roundConfigList(), function (roundConfig) {
                                         return ko.utils.arrayFirst(roundConfig.children(), function(roundParam){
@@ -471,26 +462,22 @@
                                     // Error Message
                                 }
                                 model.hideModal();
-                            }
-                        });
-                    }
-                    else {
+                            });
+                    } else {
                         // Create Request
+                        var roundPk = parseInt($("#id_round_configuration").val());
                         var match = ko.utils.arrayFirst(model.roundConfigList(), function (item) {
                             return roundPk === item.pk();
                         });
-                        $.ajax("/api/configuration/round/param/-1", {
-                            data: formData + '&round_configuration=' + roundPk + '&request_type=create',
-                            type: "POST",
-                            success: function(result){
+                        $.post("/api/configuration/round/param/-1", formData + '&request_type=create')
+                            .done(function(result){
                                 if(result.success){
                                     match.children.push(result.round_param);
                                     model.hideModal();
                                 } else {
                                     // Error Message
                                 }
-                            }
-                        });
+                            });
                     }
                 }
 
