Added code to handle chat messages. Now updating participants via pubsub

--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -347,7 +347,7 @@
                 confirmAction(evt.target, function(confirmed, action) {
                     if (confirmed) {
                         console.debug("sending update event");
-                        sendUpdateEvent();
+                        // FIXME: add the endpoint to updateParticipants
                     }
                 });
             };
