Fixing broken Forestry Experiment due to redis intergation

--- a/vcweb/experiment/forestry/templates/forestry/participate.html
+++ b/vcweb/experiment/forestry/templates/forestry/participate.html
@@ -482,7 +482,6 @@
                     participant_group_id: model.participantGroupId()
                 }, function(response) {
                     model.readyParticipants(response.number_of_ready_participants);
-                    getWebSocket().send(createReadyEvent(message));
                     model.activateTemplate("WAITING_ROOM");
                 });
                 scrollToTop();
@@ -590,7 +589,14 @@
                 var message = $('#chatMessage').val();
                 if (message) {
                     $('#chatMessage').val('');
-                    getWebSocket().send(createMessageEvent(message));
+                        $.post('/api/experiment/{{experiment.pk|default:-1}}/chat/submit',
+                                { participant_group_id: model.participantGroupId(), message: message },
+                            function(data) {
+                                if(!data.success) {
+                                    console.error("There was some error sending chat.")
+                                }
+                        });
+
                     $('#chatMessage').focus();
                 }
                 return false;
