--- a/vcweb/core/templates/participant/dashboard.html
+++ b/vcweb/core/templates/participant/dashboard.html
@@ -11,9 +11,9 @@ Participant Dashboard
     </div>
     <div class='panel-body'>
         <div data-bind='ifnot: hasUpcomingEvents'>
-            <div class='alert alert-danger alert-block'>
-                You're not participating in any experiments at the moment. Please check again later or <a
-                    href='/contact'>contact us</a> if you have any questions.
+            <div class='alert alert-warning alert-block'>
+                You're not signed up for any experiments at the moment. We periodically invite random groups of
+                participants to participate in experiments. Please check again later or <a href='/contact'>contact us</a> if you have any questions.
             </div>
         </div>
         <div data-bind='if: pendingExperiments().length > 0'>
@@ -99,7 +99,7 @@ $(function() {
         };
         model.hasUpcomingEvents = ko.computed(function() {
             return model.pendingExperiments().length > 0 || model.runningExperiments().length > 0
-                || model.signups().length > 0 || model.hasPendingInvitations;
+                || model.signups().length > 0 || model.hasPendingInvitations();
         });
         return model;
     }
